fix table 1 white space

--- a/src/css/components/_table1.scss
+++ b/src/css/components/_table1.scss
@@ -65,7 +65,6 @@
 	padding-right: 3rem;
 }
 .tbl1 td a{
-	white-space:normal;
 	word-break:break-all;
 }
 
